update silex user pack

--- a/src/Acme/SecurePack/views/default/index.html.twig
+++ b/src/Acme/SecurePack/views/default/index.html.twig
@@ -1,7 +1,7 @@
 {% extends '@AcmeSecure/default/layout.html.twig' %}
 
 {% block content %}
-<p>ADMIN</p>
+<p>INDEX</p>
 <p>
 {% if user %}
 {{ user.username|e }} :
