--- a/src/Acme/SecurePack/views/default/secured.html.twig
+++ b/src/Acme/SecurePack/views/default/secured.html.twig
@@ -14,6 +14,9 @@
 <a href="{{ path('acme_secured_logout') }}">Logout</a>
 </p>
 <p>
+<a href="{{ path('user.acme_secured_change_password') }}">Change password</a>
+</p>
+<p>
 <a href="{{ path('acme_secure.admin') }}">Admin</a>
 </p>
 {% endblock content %}
